src/objects/P7S1_AccountAccess__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_AccessReason__c</fullName>
        <inlineHelpText>Detaillierte Begründung warum Account Lead zur eigenen Unit wechseln sollte, Zielsetzung Vertriebsaktivitäten, Mehrwert für den Konzern</inlineHelpText>
        <label>Begründung Account Übernahme</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountIndex__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Index</label>
        <referenceTo>P7S1_AccountIndex__c</referenceTo>
        <relationshipLabel>Account Freigaben</relationshipLabel>
        <relationshipName>Account_Freigaben</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountOwnerID__c</fullName>
        <formula>&quot;1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountOwnerUnit__c</fullName>
        <formula>P7S1_Account__r.Owner.P7S1_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountOwnerUnit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Freigaben</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Freigaben</relationshipLabel>
        <relationshipName>Account_Freigaben</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_AgencyContact__c</fullName>
        <label>Ansprechpartner Agentur + Funktion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agentur</label>
        <referenceTo>P7S1_AccountIndex__c</referenceTo>
        <relationshipLabel>Account Freigaben (Agentur)</relationshipLabel>
        <relationshipName>Account_Freigaben1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_ApprovalState__c</fullName>
        <label>Genehmigungsstatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abgelehnt</fullName>
                </value>
                <value>
                    <fullName>Eingereicht</fullName>
                </value>
                <value>
                    <fullName>Genehmigt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_CampaignEnd__c</fullName>
        <label>Kampagnenende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_CampaignStart__c</fullName>
        <label>Kampagnenstart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_CustomerContact__c</fullName>
        <inlineHelpText>wenn kein Name vorhanden, Abteilung für die Deal-Ansprache hinterlegen</inlineHelpText>
        <label>Ansprechpartner oder Abteilung Kunde</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CustomerGroup__c</fullName>
        <formula>P7S1_Account__r.Som_KonzernAgenturverbund__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Konzern</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CustomerProduct__c</fullName>
        <inlineHelpText>Angabe des Kunden Produkts, was beworben werden soll</inlineHelpText>
        <label>Kundenprodukt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Customer__c</fullName>
        <formula>P7S1_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kunde</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IsApproved__c</fullName>
        <formula>IF( TEXT( P7S1_ApprovalState__c ) == &apos;Genehmigt&apos; , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ist genehmigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_LogoIntegration__c</fullName>
        <label>Variante Logo Integration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spot Integration</fullName>
                </value>
                <value>
                    <fullName>Spot Integration mit voice-over</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Mn3TargetEstimated__c</fullName>
        <inlineHelpText>Einschätzung potentieller MN3 für Media Deal: bei Anfrage an 71M TV-Anteil hinterlegen, bei Anfrage an D&amp;A Gesamt-Deal einschätzen</inlineHelpText>
        <label>Ziel MN3 (geschätzt)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P7S1_OwnerUnit__c</fullName>
        <formula>Owner:User.P7S1_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Unit (Antragsteller)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_ProjectDescription__c</fullName>
        <inlineHelpText>Detaillierte Erläuterung des Projektes und Zielsetzung
(kann auch auf Konzeptpapier im Anhang verwiesen werden)</inlineHelpText>
        <label>Projektbeschreibung</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_ProjectTitle__c</fullName>
        <inlineHelpText>Sprechender Titel des Projektes / des Antrags</inlineHelpText>
        <label>Projekttitel</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Wiedervorlage__c</fullName>
        <label>Wiedervorlage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Som_DigitalSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Freigaben1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Som_Einkaufsagenturverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Einkaufsagenturverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Freigaben3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Som_Planungsagenturverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planungsagenturverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Freigaben4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Som_TVKundenverkaeufer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TV Kundenverkäufer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Freigaben2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Freigabe</label>
    <listViews>
        <fullName>Alle_eingereichten_Freigabe_Antr_ge</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_AccessReason__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_ApprovalState__c</field>
            <operation>equals</operation>
            <value>Eingereicht</value>
        </filters>
        <label>Alle eingereichten Freigabe-Anträge</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_AlleAbgelehntenFreigabe_Antr_ge</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_AccessReason__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_ApprovalState__c</field>
            <operation>equals</operation>
            <value>Abgelehnt</value>
        </filters>
        <label>Alle abgelehnten Freigabe-Anträge</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_AlleFreigabeAntraegeOhneStatus</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_AccessReason__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_ApprovalState__c</field>
            <operation>equals</operation>
        </filters>
        <label>Alle Freigabe-Anträge ohne Status</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_AlleFreigabeantraege</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Freigabe-Anträge</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_AlleGenehmigtenFreigabeAntraege</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_AccessReason__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_ApprovalState__c</field>
            <operation>equals</operation>
            <value>Genehmigt</value>
        </filters>
        <label>Alle genehmigten Freigabe-Anträge</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_MeineAbgelehntenFreigabe_Antr_ge</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_AccessReason__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>P7S1_ApprovalState__c</field>
            <operation>equals</operation>
            <value>Abgelehnt</value>
        </filters>
        <label>Meine abgelehnten Freigabe-Anträge</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_MeineEingereichtenFreigabeAntraege</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_AccessReason__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>P7S1_ApprovalState__c</field>
            <operation>equals</operation>
            <value>Eingereicht</value>
        </filters>
        <label>Meine eingereichten Freigabe-Anträge</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_MeineFreigabeAntraegeOhneStatus</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_AccessReason__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>P7S1_ApprovalState__c</field>
            <operation>equals</operation>
        </filters>
        <label>Meine Freigabe-Anträge ohne Status</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_MeineFreigabeantraege</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_AccessReason__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Mine</filterScope>
        <label>Meine Freigabe-Anträge</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_MeineGenehmigtenFreigabeAntraege</fullName>
        <columns>NAME</columns>
        <columns>P7S1_AccountIndex__c</columns>
        <columns>P7S1_CustomerProduct__c</columns>
        <columns>P7S1_Mn3TargetEstimated__c</columns>
        <columns>P7S1_AccessReason__c</columns>
        <columns>P7S1_LogoIntegration__c</columns>
        <columns>P7S1_ApprovalState__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>P7S1_OwnerUnit__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>P7S1_ApprovalState__c</field>
            <operation>equals</operation>
            <value>Genehmigt</value>
        </filters>
        <label>Meine genehmigten Freigabe-Anträge</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P7S1_SteeringDandASales_P7S1_AccountAccess</fullName>
        <filterScope>Queue</filterScope>
        <label>Steering d&amp;a Sales</label>
        <queue>P7S1_SteeringDandASales</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>P7S1_SteeringDooH_P7S1_AccountAccess</fullName>
        <filterScope>Queue</filterScope>
        <label>Steering DooH</label>
        <queue>P7S1_SteeringDooH</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>P7S1_SteeringPuls4_P7S1_AccountAccess</fullName>
        <filterScope>Queue</filterScope>
        <label>Steering Puls4</label>
        <queue>P7S1_SteeringPuls4</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>P7S1_Steering_7Life_P7S1_AccountAccess</fullName>
        <filterScope>Queue</filterScope>
        <label>Steering 7Life</label>
        <queue>P7S1_Steering_7Life</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>P7S1_Steering_7Sports_P7S1_AccountAccess</fullName>
        <filterScope>Queue</filterScope>
        <label>Steering 7Sports</label>
        <queue>P7S1_Steering_7Sports</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Account Freigabe-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Freigaben</pluralLabel>
    <recordTypes>
        <fullName>P7S1_AccountUebernahme</fullName>
        <active>true</active>
        <label>Account Übernahme</label>
    </recordTypes>
    <recordTypes>
        <fullName>P7S1_AufnahmeAccountTeam</fullName>
        <active>true</active>
        <label>Aufnahme ins Account Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>P7S1_LogoIntegration</fullName>
        <active>true</active>
        <label>Logo Integration</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>